--- a/WolvenKit/Views/Backstage/RecentlyUsedItemsView.xaml
+++ b/WolvenKit/Views/Backstage/RecentlyUsedItemsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.RecentlyUsedItemsView"
+<catel:UserControl x:Class="WolvenKit.Views.RecentlyUsedItemsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -20,8 +20,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <orchestra:RibbonBackstageTabItemHeader Grid.Row="0" HeaderText="Recent documents" 
-                                                HeaderTextStyleKey="RibbonBackstageSubHeaderLabelStyle"
+        <orchestra:RibbonBackstageTabItemHeader  Grid.Row="0" HeaderText="Recent documents" Height="60" 
                                                 Icon="{orctheming:FontImage {x:Static global:FontAwesome.FolderOpenO}, FontFamily=FontAwesome}" />
 
         <ItemsControl Grid.Row="1"
